Bug 1430171 - Allow scrolling the shortcut table when viewing on smaller screens

--- a/ui/css/treeherder-global.css
+++ b/ui/css/treeherder-global.css
@@ -410,6 +410,11 @@ h4 {
     width:100%;
 }
 
+#shortcut-table-card {
+    max-height: 90vh;
+    overflow: auto;
+}
+
 /*
  * Clipboard
  *
